test/library/packages/LinearAlgebra/correctness/no-dependencies/implementation-unavailable.good
implementation-unavailable.chpl:5: error: cholesky() requires LAPACK
