test/library/packages/LinearAlgebra/correctness/no-dependencies/implementation-unavailable.chpl
use LinearAlgebra;

var A = Matrix(10);

var L = cholesky(A);
